= edge (minor version update)

* Compatibility with Ext 3.0 (and dropping compatibility with 2.x)
* Compatibility with latest netzke-core
* Impr: Form/GridPanel-based widgets: more consistent Ext.Action-related functionality and code, like (context) menu, bbar, etc.
* Impr: GridPanel: <tt>rows_reordering_available</tt> is now true by default.
* Impr: TreePanel now sets "leaf" attribute to true if the node has no children.
* Impr: Grid/TreePanel now have persistent config enabled by default.
* Fix: GridPanel didn't fire row editing when the first column was a "checkbox" column.
* Fix: the GridPanel's <tt>:scopes</tt> parameter now correctly processes named scopes as strings inside the array, e.g.
    :scopes => ["current", [:id_gt, 100]]
* Fix: on deleting records from GridPanel, <tt>destroy</tt> method is being called instead of <tt>delete</tt>.
* Fix: FieldsConfigurator made a little bit more stable.
* Fix: patching Ext's bug that caused double firing of "columnmove" in GridPanel.

= v0.5.2 - 2009-09-24
Fix: combobox options for association columns didn't work properly.
Fix: GridPanel's multi-edit functionality didn't work.
Fix: gem dependencies are now correct.

= v0.5.1 - 2009-09-11
Fix: crash when FormPanel has no data_class_name specified.
New: DataAccessor widgets (Form/GridPanel) now let the underlying model know which widget (i.e. which instance) accesses its data. Can be useful in virtual attributes for generating widget-specific HTML.
Fix: DataAccessor widgets (Form/GridPanel) now don't crash when calculating default columns/fields for the underlying model that has polymorphic columns.
Fix: TabPanel was sending redundant "tabchange" event to server when initially instantiated.
Fix: column filters were making GridPanel crash when the column editor was set to "textarea".
Fix: dongling comma and "delete" object properties caused problems in IE and Safari.
Fix: a stand-alone TabPanel would not render the active item.